Fix error in WebVR set Activate

Somehow an _ got removed that shouldn't have been.

Bug: 876478
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:linux_vr;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I8f0368cfbc2b2f0e1180ecf9ab2f126d2c418394
Reviewed-on: https://chromium-review.googlesource.com/1183846
Reviewed-by: Brian Sheedy <bsheedy@chromium.org>
Commit-Queue: Anna Offenwanger <offenwanger@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585043}
Former-commit-id: f71fb12ebd22cbd4aa45a6fc69a7a628424d8268